--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-20.04
     name: QLCplus Linux ${{matrix.task}}
     strategy:
-      #fail-fast: false
+      fail-fast: false
       matrix:
         task: [compile-qt5, compile-qt5qml,coverage-qt5]
         #task: [compile-qt5qml]
@@ -161,6 +161,21 @@ jobs:
       - name: Build
         run: make -j $NPROC
 
+      - name: Test
+        if: ${{ ! startsWith( matrix.task, 'coverage') }}
+        run: make check
+
+      - name: Test with Coverage
+        if: ${{ startsWith( matrix.task, 'coverage') }}
+        run: make lcov
+
+      - name: Coveralls
+        if: ${{ startsWith( matrix.task, 'coverage') }}
+        uses: coverallsapp/github-action@1.1.3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: coverage/coverage.info
+
       - name: Install
         if: ${{ ! startsWith( matrix.task, 'coverage') }}
         run: |
@@ -229,21 +244,6 @@ jobs:
         with:
           name: ${{ matrix.task }}-AppImage
           path: Q_Light_Controller_Plus-x86_64.AppImage
-
-      - name: Test
-        if: ${{ ! startsWith( matrix.task, 'coverage') }}
-        run: make check
-
-      - name: Test with Coverage
-        if: ${{ startsWith( matrix.task, 'coverage') }}
-        run: make lcov
-
-      - name: Coveralls
-        if: ${{ startsWith( matrix.task, 'coverage') }}
-        uses: coverallsapp/github-action@1.1.3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: coverage/coverage.info
 
   build-windows:
     if: false
