--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ jobs:
     strategy:
       #fail-fast: false
       matrix:
-        #task: [compile-qt5, compile-qt5qml,coverage-qt5]
-        task: [compile-qt5qml]
+        task: [compile-qt5, compile-qt5qml,coverage-qt5]
+        #task: [compile-qt5qml]
     env:
       CI_REPO_SLUG: ${{ github.repository }}
       CI_BRANCH: ${{ github.head_ref }}
