--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
         libgl1-mesa-dev
         libxml2-utils
         xvfb
+        ccache
         wget
       PACKAGES_QML_BASE:
         libpulse-dev
@@ -111,6 +112,15 @@ jobs:
       - name: Install python-lxml for fixtures-tool # with the now-registered aqt python
         run: pip install lxml
 
+      - name: Setup ccache
+        uses: Chocobo1/setup-ccache-action@v1
+        with:
+          update_packager_index: false
+          install_ccache: false
+          ccache_options: |
+            max_size=2G
+            compression=false
+
       - name: Setup ruby cache
         uses: ruby/setup-ruby@v1
         with:
@@ -152,6 +162,23 @@ jobs:
 
       - name: Build
         run: make -j $NPROC
+
+      - name: Test
+        if: ${{ ! startsWith( matrix.task, 'coverage') }}
+        uses: GabrielBB/xvfb-action@v1
+        with:
+          run: make check
+
+      - name: Test with Coverage
+        if: ${{ startsWith( matrix.task, 'coverage') }}
+        run: make lcov
+
+      - name: Coveralls
+        if: ${{ startsWith( matrix.task, 'coverage') }}
+        uses: coverallsapp/github-action@1.1.3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: coverage/coverage.info
 
       - name: Install
         if: ${{ ! startsWith( matrix.task, 'coverage') }}
@@ -221,23 +248,6 @@ jobs:
         with:
           name: ${{ matrix.task }}-AppImage
           path: Q_Light_Controller_Plus-x86_64.AppImage
-
-      - name: Test
-        if: ${{ ! startsWith( matrix.task, 'coverage') }}
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: make check
-
-      - name: Test with Coverage
-        if: ${{ startsWith( matrix.task, 'coverage') }}
-        run: make lcov
-
-      - name: Coveralls
-        if: ${{ startsWith( matrix.task, 'coverage') }}
-        uses: coverallsapp/github-action@1.1.3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: coverage/coverage.info
 
   build-windows:
     #if: false
