Replaced in CMake files since they are not supported in Qt5. * qt_add_library -> add_library * qt_add_executable -> add_executable

--- a/engine/audio/src/CMakeLists.txt
+++ b/engine/audio/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_library(qlcplusaudio
+add_library(qlcplusaudio
     audio.cpp audio.h
     audiocapture.cpp audiocapture.h
     audiodecoder.cpp audiodecoder.h
