--- a/engine/test/genericfader/CMakeLists.txt
+++ b/engine/test/genericfader/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(genericfader_test WIN32
+add_executable(genericfader_test WIN32
     ../common/resource_paths.h
     genericfader_test.cpp genericfader_test.h
 )
