--- a/engine/test/keypadparser/CMakeLists.txt
+++ b/engine/test/keypadparser/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(keypadparser_test WIN32
+add_executable(keypadparser_test WIN32
     keypadparser_test.cpp keypadparser_test.h
 )
 target_include_directories(keypadparser_test PRIVATE
