--- a/engine/test/outputpatch/CMakeLists.txt
+++ b/engine/test/outputpatch/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(outputpatch_test WIN32
+add_executable(outputpatch_test WIN32
     outputpatch_test.cpp outputpatch_test.h
 )
 target_include_directories(outputpatch_test PRIVATE
