--- a/engine/test/qlcchannel/CMakeLists.txt
+++ b/engine/test/qlcchannel/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(qlcchannel_test WIN32
+add_executable(qlcchannel_test WIN32
     qlcchannel_test.cpp qlcchannel_test.h
 )
 target_include_directories(qlcchannel_test PRIVATE
