--- a/engine/test/qlcfixturedefcache/CMakeLists.txt
+++ b/engine/test/qlcfixturedefcache/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(qlcfixturedefcache_test WIN32
+add_executable(qlcfixturedefcache_test WIN32
     ../common/resource_paths.h
     qlcfixturedefcache_test.cpp qlcfixturedefcache_test.h
 )
