--- a/engine/test/qlcfixturemode/CMakeLists.txt
+++ b/engine/test/qlcfixturemode/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(qlcfixturemode_test WIN32
+add_executable(qlcfixturemode_test WIN32
     qlcfixturemode_test.cpp qlcfixturemode_test.h
 )
 target_include_directories(qlcfixturemode_test PRIVATE
