--- a/engine/test/rgbscript/CMakeLists.txt
+++ b/engine/test/rgbscript/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(rgbscript_test WIN32
+add_executable(rgbscript_test WIN32
     ../common/resource_paths.h
     rgbscript_test.cpp rgbscript_test.h
 )
