--- a/engine/test/script/CMakeLists.txt
+++ b/engine/test/script/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(script_test WIN32
+add_executable(script_test WIN32
     ../mastertimer/mastertimer_stub.cpp ../mastertimer/mastertimer_stub.h
     script_test.cpp script_test.h
 )
