--- a/plugins/artnet/test/CMakeLists.txt
+++ b/plugins/artnet/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(artnet_test WIN32 MACOSX_BUNDLE
+add_executable(artnet_test WIN32 MACOSX_BUNDLE
     ../../interfaces/qlcioplugin.cpp ../../interfaces/qlcioplugin.h
     ../../interfaces/rdmprotocol.cpp ../../interfaces/rdmprotocol.h
     ../src/artnetpacketizer.cpp
