--- a/ui/test/vcbutton/CMakeLists.txt
+++ b/ui/test/vcbutton/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(vcbutton_test WIN32 MACOSX_BUNDLE
+add_executable(vcbutton_test WIN32 MACOSX_BUNDLE
     vcbutton_test.cpp vcbutton_test.h
 )
 target_include_directories(vcbutton_test PRIVATE
