--- a/ui/test/vccuelist/CMakeLists.txt
+++ b/ui/test/vccuelist/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(vccuelist_test WIN32 MACOSX_BUNDLE
+add_executable(vccuelist_test WIN32 MACOSX_BUNDLE
     vccuelist_test.cpp vccuelist_test.h
 )
 target_include_directories(vccuelist_test PRIVATE
