--- a/ui/test/vcproperties/CMakeLists.txt
+++ b/ui/test/vcproperties/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(vcproperties_test WIN32 MACOSX_BUNDLE
+add_executable(vcproperties_test WIN32 MACOSX_BUNDLE
     vcproperties_test.cpp vcproperties_test.h
 )
 target_include_directories(vcproperties_test PRIVATE
