--- a/engine/test/collection/CMakeLists.txt
+++ b/engine/test/collection/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(collection_test WIN32
+add_executable(collection_test WIN32
     ../mastertimer/mastertimer_stub.cpp ../mastertimer/mastertimer_stub.h
     collection_test.cpp collection_test.h
 )
