Replaced if(CONFIG(X)) with if(X) in CMake files.

--- a/engine/test/chaser/CMakeLists.txt
+++ b/engine/test/chaser/CMakeLists.txt
@@ -44,7 +44,7 @@ if(MACOS)
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(chaser_test PRIVATE
         gcov
     )
