--- a/engine/test/collection/CMakeLists.txt
+++ b/engine/test/collection/CMakeLists.txt
@@ -43,7 +43,7 @@ if(MACOS)
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(collection_test PRIVATE
         gcov
     )
