--- a/engine/test/keypadparser/CMakeLists.txt
+++ b/engine/test/keypadparser/CMakeLists.txt
@@ -41,7 +41,7 @@ if(MACOS)
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(keypadparser_test PRIVATE
         gcov
     )
