--- a/engine/test/mastertimer/CMakeLists.txt
+++ b/engine/test/mastertimer/CMakeLists.txt
@@ -58,7 +58,7 @@ if(MACOS)
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(mastertimer_test PRIVATE
         gcov
     )
