--- a/engine/test/rgbmatrix/CMakeLists.txt
+++ b/engine/test/rgbmatrix/CMakeLists.txt
@@ -56,7 +56,7 @@ if(MACOS)
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(rgbmatrix_test PRIVATE
         gcov
     )
