--- a/engine/test/rgbscript/CMakeLists.txt
+++ b/engine/test/rgbscript/CMakeLists.txt
@@ -55,7 +55,7 @@ if(MACOS)
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(rgbscript_test PRIVATE
         gcov
     )
