--- a/plugins/artnet/src/CMakeLists.txt
+++ b/plugins/artnet/src/CMakeLists.txt
@@ -46,7 +46,7 @@ if((NOT MACOS AND NOT IOS) AND (NOT (system(g++--version OR grep-e"4.6.[0-9]")))
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(artnet PRIVATE
         gcov
     )
