--- a/plugins/artnet/test/CMakeLists.txt
+++ b/plugins/artnet/test/CMakeLists.txt
@@ -45,7 +45,7 @@ if(MACOS)
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(artnet_test PRIVATE
         gcov
     )
