--- a/engine/test/chaserstep/CMakeLists.txt
+++ b/engine/test/chaserstep/CMakeLists.txt
@@ -41,7 +41,7 @@ if(MACOS)
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(chaserstep_test PRIVATE
         gcov
     )
