--- a/engine/test/qlcinputprofile/CMakeLists.txt
+++ b/engine/test/qlcinputprofile/CMakeLists.txt
@@ -42,7 +42,7 @@ if(MACOS)
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(qlcinputprofile_test PRIVATE
         gcov
     )
