--- a/ui/test/palettegenerator/CMakeLists.txt
+++ b/ui/test/palettegenerator/CMakeLists.txt
@@ -55,7 +55,7 @@ if(MACOS)
     )
 endif()
 
-if(CONFIG(coverage))
+if(coverage)
     target_link_libraries(palettegenerator_test PRIVATE
         gcov
     )
